`examples/static/` -> `examples/static-assets`

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -12,6 +12,7 @@ jobs:
                 - routing/namespaced
                 - routing/simple
                 - simple
+                - static-assets
 
     steps:
       - uses: actions/checkout@v4
