--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -12,7 +12,7 @@ jobs:
                 - routing/namespaced
                 - routing/simple
                 - simple
-                - static-assets
+                - static/simple
 
     steps:
       - uses: actions/checkout@v4
