add dynamic routing example

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -9,6 +9,8 @@ jobs:
     strategy:
         matrix:
             example:
+                - middleware/simple
+                - routing/dynamic
                 - routing/namespaced
                 - routing/simple
                 - simple
