add dynamic rewrite example

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -15,6 +15,7 @@ jobs:
                 - routing/simple
                 - simple
                 - static/simple
+                - static/rewrites/dynamic
                 - static/rewrites/static
 
     steps:
