add error mapping example

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
         matrix:
             example:
+                - errors/mapping
                 - middleware/simple
                 - routing/dynamic
                 - routing/namespaced
