add routing example

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -11,6 +11,7 @@ jobs:
             example:
                 - errors/mapping
                 - middleware/simple
+                - routing/complex
                 - routing/dynamic
                 - routing/namespaced
                 - routing/simple
