--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -17,6 +17,7 @@ jobs:
                 - routing/simple
                 - simple
                 - static/simple
+                - static/rewrites/complex
                 - static/rewrites/dynamic
                 - static/rewrites/static
 
