example for custom error handling

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
         matrix:
             example:
+                - errors/handling
                 - errors/mapping
                 - middleware/simple
                 - routing/complex
