add basic CORS middleware example

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -12,6 +12,7 @@ jobs:
                 - errors/handling
                 - errors/mapping
                 - middleware/simple
+                - middleware/cors
                 - routing/complex
                 - routing/dynamic
                 - routing/namespaced
