add todo example to build

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -23,6 +23,7 @@ jobs:
                 - static/rewrites/complex
                 - static/rewrites/dynamic
                 - static/rewrites/static
+                - todo
 
     steps:
       - uses: actions/checkout@v4
