refactor login API JS to script

--- a/examples/todo/conf/rewrites.conf
+++ b/examples/todo/conf/rewrites.conf
@@ -4,5 +4,8 @@
 # This allows us to avoid having .html in the URLs used in the browser
 /${page} 			/static/html/${page}.html
 
+# We can find all js files by their extension
+/${file||.js}		/static/js/${file}
+
 # Serve all css files from /css to /static/styles
 /css/${file||.css} 	/static/styles/${file}
