add page to view individual list

--- a/examples/todo/conf/rewrites.conf
+++ b/examples/todo/conf/rewrites.conf
@@ -9,3 +9,7 @@
 
 # Serve all css files from /css to /static/styles
 /css/${file||.css} 	/static/styles/${file}
+
+# This allows us to serve 1 static file and then perform the dynamic lookups
+# within the script.
+/lists/${id}		/static/html/list.html
