--- a/examples/todo/conf/rewrites.conf
+++ b/examples/todo/conf/rewrites.conf
@@ -13,3 +13,7 @@
 # This allows us to serve 1 static file and then perform the dynamic lookups
 # within the script.
 /lists/${id}		/static/html/list.html
+
+# The favicon, which is loaded on every page and appears in the top left corner
+# of the tab on the browser
+/favicon.ico		/static/images/favicon.png
