example that accepts http and https requests

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -11,6 +11,7 @@ jobs:
             example:
                 - errors/handling
                 - errors/mapping
+                - https/both
                 - middleware/complex
                 - middleware/cors
                 - middleware/simple
